--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,7 @@
       - firefly_3_access_token is defined
       - firefly_3_url is defined
       - import_files_dir is defined
+      - notifications_endpoint is defined
 
 - name: Create the importer directory
   file:
